--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
         "axios": "^0.18.0",
         "bcrypt": "^2.0.1",
         "body-parser": "^1.18.3",
+        "cloudinary-react": "^1.0.6",
         "express": "^4.15.4",
+        "google-maps-react": "^2.0.2",
         "mongoose": "^5.1.5",
+        "react": "^16.4.1",
         "react-dom": "^16.4.1",
-        "react-helmet": "^5.2.0"
+        "react-dropzone": "^4.2.13",
+        "react-helmet": "^5.2.0",
+        "react-materialize": "^2.3.3",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "^1.1.4"
     }
 }
